k8s/namespaces/hub/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hub
  namespace: hub
  labels:
    app.kubernetes.io/name: hub
    app.kubernetes.io/part-of: hub
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: hub
    app.kubernetes.io/part-of: hub
