k8s/namespaces/hub/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hub
  labels:
    app.kubernetes.io/name: hub
    app.kubernetes.io/part-of: hub

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: hub
  labels:
    app.kubernetes.io/name: hub
    app.kubernetes.io/part-of: hub
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
